--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header{
   border-bottom: 3px solid #50C7C7;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 
 
   /*Your  code here again.*/
@@ -26,8 +27,10 @@ header{
   /*Your code here again.*/
   text-decoration: none;
   display: flex;
-  align-items: baseline;
-  list-style-type: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  
 }
 
 
