--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,10 @@
 body{
   margin: 0;
   padding: 0;
-  font-size: 16pt; 
+  font-size: 16px; 
   font-family: Raleway, "sans-seriff";
   background-image: url(../images/concrete_seamless.png);
+ 
   
 }
 
@@ -40,6 +41,23 @@ header{
 .price{
     min-height: 500px;
     /*Your code here*/
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+    -webkit-box-pack: center;
+      -ms-flex-pack: center;
+        justify-content: center;
+    -webkit-box-align: center;
+      -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-line-pack: center;
+      align-content: center;
+
+
     /*You must use flex.
     /*Don't forget to vertically and horizontally 
     align the element*/
@@ -52,14 +70,16 @@ header{
   border-radius: 7px;
   padding: 0 0 50px 0;
   /*Your code here.*/
+  -ms-flex-preferred-size: 400px;
+    flex-basis: 400px;
   /*Take a look at flex-basis*/
 
 }
 
 /*Requirement 6*/
- /*UNCOMMENT THIS CODE ONCE YOU
- HAVE THE SELECTOR
-{
+ 
+
+ .package > header{
   background: #288080;
   border: 2px solid #45ADAD;
   padding: 20px 0;
