--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*Begin your code here*/
 /*Requirement 1*/
-@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+
 body{
   margin: 0;
   padding: 0;
@@ -24,11 +24,6 @@ h2{
   padding: 5px;
 
 }
-h3{
-  font-size: 1.5em;
-  text-align: center;
-  padding: 5px;
-  color: white;
 
 }
 
@@ -125,6 +120,12 @@ header{
   width: 90%;
   margin: 20px auto;
 }
+.package h3{ 
+  font-size: 4em;
+  color: white;
+  text-align: center;
+
+}
 
 
 /*Requirement 7*/
@@ -153,18 +154,39 @@ header{
 
 /*Requirement 9*/
 #logo{
+
    /*Your code here.*/
- 
+  animation-name: logo_grow;
+  animation-duration: 15s;
+  animation-iteration-count: 1;
+
+
 }
 
 /*Keyframes for animation*/
 @-webkit-keyframes logo_grow{
+  from{
+    width: 25px;
+    opacity: 0;
+  }
+  to{
+    width: 420px;
+    opacity: 1;
+  }
   /*Your code here.*/
 
 }
 
 @keyframes logo_grow{
   /*Your code here.*/
+  from{
+    width: 25px;
+    opacity: 0;
+  }
+  to{
+    width: 420px;
+    opacity: 1;
+  }
 
 } 
 
