--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
   margin: 0;
   padding: 0;
   font-size: 16px; 
-  font-family: "Raleway", "sans-seriff";
+  font-family: 'Raleway', 'sans-seriff';
   background-image: url(../images/concrete_seamless.png);
  
   
@@ -25,7 +25,7 @@ h2{
 
 }
 
-}
+
 
 p{
   padding: 0 30px;
@@ -57,6 +57,8 @@ header{
   align-items: center;
   flex-direction: column;
   align-items: center;  
+ 
+
   
   /*Your  code here again.*/
 
@@ -111,6 +113,7 @@ header{
   border: 2px solid #45ADAD;
   padding: 20px 0;
   border-radius: 7px 7px 0 0;
+
 }
 .package >ul{
   list-style: none;
@@ -125,6 +128,16 @@ header{
   color: white;
   text-align: center;
 
+}
+.package button{
+  width: 90%;
+  height: 40px;
+  border: 0;
+  margin-left: 12px;
+  border-radius: 7px;
+  background: #288080;
+  color: white;
+  font-size: 1em;
 }
 
 
