--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
   margin: 0;
   padding: 0;
   font-size: 16px; 
-  font-family: 'Raleway', 'sans-seriff';
+  font-family: 'Raleway', 'sans-serif';
   background-image: url(../images/concrete_seamless.png);
  
   
