--- a/css/style.css
+++ b/css/style.css
@@ -11,43 +11,6 @@ body{
   
 }
 /*testing this out can delete laterr*/
-h1{
-  font-size: 2em;
-  text-align: center;
-  line-height: 2;
-
-}
-
-h2{ 
-  font-size: 1.5em;
-  text-align: center;
-  padding: 5px;
-
-}
-
-
-
-p{
-  padding: 0 30px;
-}
-
-a.skip{
-  background: white;
-  left: 0;
-  padding: 6px;
-  position: absolute;
-  top: -40px;
-  
-}
-a.skip:focus{
-  top:20px;
-  color: black;
-  text-decoration-style: solid;
-}
-
-*:focus{
-  border: 2px solid black;
-}
 
 /*Requirement 2*/
 header{
@@ -63,11 +26,53 @@ header{
   /*Your  code here again.*/
 
 }
+h1{
+  font-size: 2em;
+  text-align: center;
+  line-height: 2;
+}
 
+h2{
+  font-size: 1.5em;
+  text-align: center;
+  padding: 5px;
+}
+
+p {
+  padding: 0 30px;
+}
+
+a.skip{
+  background: white;
+  left: 0;
+  padding: 6px;
+  position: absolute;
+  top: -40px;
+  -webkit-transition: top 1s ease-out;
+  transition: top 1s ease-out;
+  z-index: 1;
+}
+
+a.skip:focus{
+  top:20px;
+  color: black;
+  text-decoration-style: solid;
+}
+
+*:focus{
+  border: 2px solid black;
+}
+
+footer{
+  background-color: black;
+  color: white;
+  padding: 30px;
+  text-align: center;
+}
 /*Requirement 3*/
 .nav_links{
   /*Your code here again.*/
-  list-style: none;
+  list-style: none; 
   display: flex;
   flex-direction: column;
 
@@ -115,20 +120,16 @@ header{
   border-radius: 7px 7px 0 0;
 
 }
-.package >ul{
+.package > ul{
   list-style: none;
   padding: 0;
 }
-.package > ul li{
+
+.package > ul li {
   width: 90%;
   margin: 20px auto;
 }
-.package h3{ 
-  font-size: 4em;
-  color: white;
-  text-align: center;
 
-}
 .package button{
   width: 90%;
   height: 40px;
@@ -139,6 +140,18 @@ header{
   color: white;
   font-size: 1em;
 }
+
+.package h3{
+  font-size: 4em;
+  color: white;
+  text-align: center;
+}
+
+.big_card{
+  -webkit-transform: initial;
+          transform: initial;
+}
+
 
 
 /*Requirement 7*/
@@ -159,10 +172,7 @@ header{
   margin: 10px;
   width: 300px;
 }
-.nav_links a {
-  text-decoration: none;
-  color: black;
-}
+
 
 
 /*Requirement 9*/
@@ -175,6 +185,23 @@ header{
 
 
 }
+.nav_links{
+  width:100%;
+}
+
+.nav_item a{
+  color: black;
+  text-decoration: none;
+}
+
+.nav_item a:hover, a:focus{
+  color: #50C7C7;
+  text-decoration: underline;
+  -webkit-text-decoration-style: dotted;
+          text-decoration-style: dotted;
+}
+
+
 
 /*Keyframes for animation*/
 @-webkit-keyframes logo_grow{
@@ -207,6 +234,7 @@ header{
 
   /*Requirement 10*/
   header{
+    flex: flex;
     flex-direction: row;
     justify-content: space-between;
 
@@ -222,12 +250,22 @@ header{
 
   /*Requirement 11*/
   .package {
-    flex-basis: 250px;
+    flex-basis: 230px;
     align-items: center;
     /*Your code here again.*/
   } 
   .big_card{
     transform: scaleX(1.12);
+  
+  }
+
+  .big_card{
+    -webkit-transform: scaleX(1.12);
+            transform: scaleX(1.12);
+  }
+
+  .nav_item a{
+    padding: 10px;
   }
 }
 
