--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
 body{
   margin: 0;
   padding: 0;
-  font-size: 16px; 
-  font-family: 'Raleway', 'sans-serif';
+  font-size: 16pt; 
+  font-family: 'Raleway', sans-serif;
   background-image: url(../images/concrete_seamless.png);
  
   
