--- a/css/style.css
+++ b/css/style.css
@@ -287,11 +287,12 @@ footer{
     background-image: none;
   }
   /*Requirement 14*/
-  .nav{
+  nav{
     width: 100%;
   }
   /*Requirement 15*/
   .nav_links{
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
 
@@ -312,9 +313,10 @@ footer{
     flex-basis: 200px;
   }
   /*Requirement 18*/
-  .gallery{
+  .gallery, #gallery{
     display: none;
   }
+  
  
 }
 
